--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.2",
     "intl-messageformat": "^10.5.0",
-    "next": "13.4.19",
+    "next": "^13.5.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-clock": "^4.5.0",
     "react-dom": "18.2.0",
     "tailwind-variants": "^0.1.13",
     "tailwindcss": "3.3.3",
