--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "next": "^13.5.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
+    "postmark": "^3.1.1",
     "react": "18.2.0",
     "react-clock": "^4.5.0",
     "react-dom": "18.2.0",
+    "sonner": "^1.0.3",
     "tailwind-variants": "^0.1.13",
     "tailwindcss": "3.3.3",
     "typescript": "5.0.4"
