--- a/package.json
+++ b/package.json
@@ -9,38 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/button": "2.0.18",
-    "@nextui-org/code": "2.0.16",
-    "@nextui-org/input": "2.1.6",
-    "@nextui-org/kbd": "2.0.17",
-    "@nextui-org/link": "2.0.19",
-    "@nextui-org/navbar": "2.0.19",
-    "@nextui-org/react": "^2.1.13",
-    "@nextui-org/snippet": "2.0.22",
-    "@nextui-org/switch": "2.0.18",
-    "@nextui-org/system": "2.0.7",
-    "@nextui-org/theme": "2.1.6",
-    "@react-aria/ssr": "^3.7.1",
-    "@react-aria/visually-hidden": "^3.8.3",
+    "@nextui-org/react": "^2.2.9",
+    "@nextui-org/theme": "^2.1.17",
     "@types/node": "20.5.7",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "autoprefixer": "10.4.15",
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
-    "framer-motion": "^10.16.2",
+    "eslint-config-next": "^14.0.4",
+    "framer-motion": "^10.16.16",
     "intl-messageformat": "^10.5.0",
-    "next": "^13.5.4",
+    "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "postmark": "^3.1.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-clock": "^4.5.0",
-    "react-dom": "18.2.0",
-    "sonner": "^1.0.3",
-    "tailwind-variants": "^0.1.13",
-    "tailwindcss": "3.3.3",
+    "react-dom": "^18.2.0",
+    "sonner": "^1.2.4",
+    "tailwind-variants": "^0.1.19",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.0.4"
   },
   "devDependencies": {
