--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-clock": "^4.5.0",
     "react-dom": "^18.2.0",
+    "react-github-calendar": "^4.1.1",
     "sonner": "^1.2.4",
     "tailwind-variants": "^0.1.19",
     "tailwindcss": "^3.3.3",
