--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@nextui-org/react": "^2.2.9",
     "@nextui-org/theme": "^2.1.17",
     "@types/node": "20.5.7",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
     "autoprefixer": "10.4.15",
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
@@ -31,7 +31,7 @@
     "sonner": "^1.2.4",
     "tailwind-variants": "^0.1.19",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.0.4"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "prettier": "^3.0.3",
