--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@types/node": "20.5.7",
         "@types/react": "^18.2.56",
         "@types/react-dom": "^18.2.19",
+        "@vercel/analytics": "^1.2.2",
         "autoprefixer": "10.4.15",
         "clsx": "^2.0.0",
         "eslint": "8.48.0",
