--- a/package.json
+++ b/package.json
@@ -9,34 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.2.9",
-    "@nextui-org/theme": "^2.1.17",
-    "@types/node": "20.5.7",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "@vercel/analytics": "^1.2.2",
-    "autoprefixer": "10.4.15",
-    "clsx": "^2.0.0",
-    "eslint": "8.48.0",
-    "eslint-config-next": "^14.0.4",
-    "framer-motion": "^10.16.16",
-    "intl-messageformat": "^10.5.0",
-    "next": "^14.1.0",
-    "next-themes": "^0.2.1",
-    "postcss": "8.4.29",
-    "postmark": "^3.1.1",
-    "react": "^18.2.0",
-    "react-clock": "^4.5.0",
-    "react-dom": "^18.2.0",
-    "react-github-calendar": "^4.1.1",
-    "sonner": "^1.2.4",
-    "tailwind-variants": "^0.1.19",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "@nextui-org/react": "^2.4.8",
+    "@nextui-org/theme": "^2.2.11",
+    "@types/node": "22.7.7",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "@vercel/analytics": "^1.3.1",
+    "autoprefixer": "10.4.20",
+    "cheerio": "^1.0.0",
+    "clsx": "^2.1.1",
+    "domhandler": "^5.0.3",
+    "eslint": "^9.13.0",
+    "eslint-config-next": "^14.2.15",
+    "framer-motion": "^11.11.9",
+    "intl-messageformat": "^10.7.0",
+    "memory-cache": "^0.2.0",
+    "next": "^14.2.15",
+    "next-themes": "^0.3.0",
+    "postcss": "8.4.47",
+    "postmark": "^4.0.5",
+    "react": "^18.3.1",
+    "react-clock": "^5.0.0",
+    "react-dom": "^18.3.1",
+    "react-github-calendar": "^4.4.2",
+    "sonner": "^1.5.0",
+    "tailwind-variants": "^0.2.1",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "@types/domhandler": "^2.4.5",
+    "@types/memory-cache": "^0.2.6",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.5.6"
+    "prettier-plugin-tailwindcss": "^0.6.8"
   }
 }
