--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/theme": "^2.2.11",
+    "@react-aria/visually-hidden": "^3.8.17",
     "@types/node": "22.7.7",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
