fix: npm build errors

--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "postcss": "8.4.47",
     "postmark": "^4.0.5",
     "react": "^18.3.1",
+    "react-activity-calendar": "^2.6.3",
     "react-clock": "^5.0.0",
     "react-dom": "^18.3.1",
-    "react-github-calendar": "^4.4.2",
     "sonner": "^1.5.0",
     "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.14",
