--- a/package.json
+++ b/package.json
@@ -8,40 +8,41 @@
     "start": "next start",
     "lint": "next lint"
   },
-"dependencies": {
-    "@nextui-org/react": "^2.2.9",
-    "@nextui-org/theme": "^2.1.17",
+  "dependencies": {
+    "@nextui-org/react": "^2.6.10",
+    "@nextui-org/theme": "^2.4.4",
     "@react-aria/ssr": "^3.9.6",
     "@react-aria/visually-hidden": "^3.8.17",
-    "@types/node": "20.5.7",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
     "@vercel/analytics": "^1.2.2",
     "autoprefixer": "10.4.15",
     "cheerio": "^1.0.0",
     "clsx": "^2.0.0",
     "domhandler": "^5.0.3",
-    "eslint": "8.48.0",
-    "framer-motion": "^10.16.16",
+    "framer-motion": "^11.15.0",
     "intl-messageformat": "^10.5.0",
     "memory-cache": "^0.2.0",
-    "next": "^14.1.0",
+    "next": "^15.1.3",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "postmark": "^3.1.1",
-    "react": "^18.2.0",
+    "react": "19.0.0-rc.1",
     "react-activity-calendar": "^2.6.3",
     "react-clock": "^4.5.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "19.0.0-rc.1",
     "sonner": "^1.2.4",
     "tailwind-variants": "^0.1.19",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@react-types/shared": "^3.26.0",
     "@types/domhandler": "^2.4.5",
     "@types/memory-cache": "^0.2.6",
-    "eslint-config-next": "^14.0.4",
+    "@types/node": "20.5.7",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
+    "eslint": "9.17.0",
+    "eslint-config-next": "^15.1.3",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.6"
