--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-activity-calendar": "^2.6.3",
     "react-clock": "^4.5.0",
     "react-dom": "19.0.0-rc.1",
+    "react-github-calendar": "^4.5.4",
     "sonner": "^1.2.4",
     "tailwind-variants": "^0.1.19",
     "tailwindcss": "^3.4.1",
@@ -39,12 +40,12 @@
     "@types/domhandler": "^2.4.5",
     "@types/memory-cache": "^0.2.6",
     "@types/node": "20.5.7",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "eslint": "9.17.0",
-    "eslint-config-next": "^15.1.3",
-    "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.5.6"
+    "@types/react": "^18.3.16",
+    "@types/react-dom": "^18.3.5",
+    "eslint": "^9.18.0",
+    "eslint-config-next": "15.1.5",
+    "eslint-config-prettier": "^10.0.1",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.10"
   }
 }
