--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint": "^9.18.0",
     "eslint-config-next": "15.1.5",
     "eslint-config-prettier": "^10.0.1",
+    "prettier": "^3.4.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.10"
   }
