chore(deps): update dependencies

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.6.10",
-    "@nextui-org/theme": "^2.4.4",
+    "@heroui/react": "2.8.5",
+    "@heroui/theme": "2.4.23",
     "@react-aria/ssr": "^3.9.6",
     "@react-aria/visually-hidden": "^3.8.17",
     "@vercel/analytics": "^1.2.2",
@@ -21,14 +21,14 @@
     "framer-motion": "^11.15.0",
     "intl-messageformat": "^10.5.0",
     "memory-cache": "^0.2.0",
-    "next": "^15.1.6",
+    "next": "^15.5.6",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "postmark": "^3.1.1",
-    "react": "19.0.0-rc.1",
+    "react": "19.2.0",
     "react-activity-calendar": "^2.6.3",
     "react-clock": "^4.5.0",
-    "react-dom": "19.0.0-rc.1",
+    "react-dom": "19.2.0",
     "react-github-calendar": "^4.5.4",
     "sonner": "^1.2.4",
     "tailwind-variants": "^0.1.19",
@@ -39,12 +39,12 @@
     "@react-types/shared": "^3.26.0",
     "@types/domhandler": "^2.4.5",
     "@types/memory-cache": "^0.2.6",
-    "@types/node": "20.5.7",
-    "@types/react": "^18.3.16",
-    "@types/react-dom": "^18.3.5",
-    "eslint": "^9.18.0",
-    "eslint-config-next": "15.1.5",
-    "eslint-config-prettier": "^10.0.1",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.3",
+    "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.4.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.10"
